syntax = "proto3";

package books.com;
option go_package ="books.com";
service BookService {
  rpc GetBooks (Empty) returns (BookList);
  rpc UpdateBook (Book) returns (Empty);
}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
  int32 year = 4;
  string isbn = 5;
}

message BookList {
  repeated Book books = 1;
}

message Empty {}
